* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Keywords can be aliased in languages.yml. See English for an example (examples: Examples|Scenarios)
* Adding support for Background (#153 Joseph Wilk) 
* Added Česky/Czech (Vojtech Salbaba)
* New --no-multiline option to reduce noise. Useful if lots of features are failing.
* Added ability to pass URIs to cucumber in addition to files and directories. Useful for troubleshooting! (Aslak Hellesøy)
* Groups of tabular scenarios (#57 Aslak Hellesøy)
* Tagging scenarios and features. Pick the ones to run with --tags (#54 Aslak Hellesøy)
* Make the current scenario available to the steps. (#44 Aslak Hellesøy)
* Step definition snippets contain a 'pending' call (#84 Aslak Hellesøy)
* Call multiline steps from other steps (#144 Aslak Hellesøy)
* Run cucumber with --autoformat DIR to reformat (pretty print) all of your feature files. (Aslak Hellesøy)
* New --strict option exits with an error code if there are undefined steps. (#52 Aslak Hellesøy)
* Given, When, Then methods (used in step definitions) are automatically aliased to current language. Use $KCODE='u' in env.rb if needed.
* Run cucumber --language help to see all supported languages. (Aslak Hellesøy)
* Run cucumber --language LANG help to see keywords for a given language. (Aslak Hellesøy)
* Multiline arguments (tables and """ strings) are printed in the output. (Aslak Hellesøy)
* It's no longer necessary to compile the Treetop grammar when adding a new language. Localised parser is generated at runtime. (Aslak Hellesøy)
* New --guess option tries to guess the best step definition match instead of raising Cucumber::Multiple. (Jake Howerton)

=== Removed features