@@ -1,4 +1,9 @@
-require 'sinatra'
+begin
+  require 'sinatra'
+rescue LoadError
+  require 'rubygems'
+  require 'sinatra'
+end
 
 get '/add' do
   erb :add
