@@ -92,6 +92,7 @@ pure Ruby users have been enjoying for a while.
 * Pending steps in > steps called from steps (#65 Aslak Hellesøy)
 
 === New features
+* Sinatra Example (#204 Rob Holland)
 * Keywords can be aliased in languages.yml. See English for an example (examples: Examples|Scenarios)
 * Adding support for Background (#153 Joseph Wilk) 
 * Added Česky/Czech (Vojtech Salbaba)
